# mav_trajectory_generation

mav_trajectory_generation_example/: CMakeLists.txt  package.xml
mav_trajectory_generation_example/launch/: minimum_snap.launch
mav_trajectory_generation_example/src/: minimum_snap_node.cpp
